namespace ET
{
	public static partial class OuterOpcode
	{
		 public const ushort C2M_TestRequest = 10002;
		 public const ushort M2C_TestResponse = 10003;
		 public const ushort Actor_TransferRequest = 10004;
		 public const ushort Actor_TransferResponse = 10005;
		 public const ushort C2G_EnterMap = 10006;
		 public const ushort G2C_EnterMap = 10007;
		 public const ushort C2G_EnterChessMap = 10059;
		 public const ushort G2C_EnterChessMap = 10060;
		 public const ushort C2G_ExitMap = 10054;
		 public const ushort G2C_ExitMap = 10055;
		 public const ushort MoveInfo = 10008;
		 public const ushort UnitInfo = 10009;
		 public const ushort M2C_CreateUnits = 10010;
		 public const ushort M2C_CreateMyUnit = 10011;
		 public const ushort M2C_StartSceneChange = 10012;
		 public const ushort M2C_StartSceneChangeToLogin = 10062;
		 public const ushort M2C_RemoveUnits = 10013;
		 public const ushort C2M_PathfindingResult = 10014;
		 public const ushort C2M_Stop = 10015;
		 public const ushort M2C_PathfindingResult = 10016;
		 public const ushort M2C_Stop = 10017;
		 public const ushort C2G_Ping = 10018;
		 public const ushort G2C_Ping = 10019;
		 public const ushort G2C_Test = 10020;
		 public const ushort C2M_Reload = 10021;
		 public const ushort M2C_Reload = 10022;
		 public const ushort C2R_Register = 10039;
		 public const ushort R2C_Register = 10040;
		 public const ushort C2R_Login = 10023;
		 public const ushort R2C_Login = 10024;
		 public const ushort C2G_Logout = 10041;
		 public const ushort G2C_Logout = 10042;
		 public const ushort C2G_LoginGate = 10025;
		 public const ushort G2C_LoginGate = 10026;
		 public const ushort G2C_TestHotfixMessage = 10027;
		 public const ushort C2M_TestRobotCase = 10028;
		 public const ushort M2C_TestRobotCase = 10029;
		 public const ushort C2M_TransferMap = 10030;
		 public const ushort M2C_TransferMap = 10031;
		 public const ushort C2M_UseSkill = 10032;
		 public const ushort M2C_UseSkill = 10033;
		 public const ushort M2C_AddBuff = 10034;
		 public const ushort M2C_Damage = 10035;
		 public const ushort M2C_ChangeSkillGroup = 10036;
		 public const ushort M2C_RemoveBuff = 10037;
		 public const ushort M2C_Interrupt = 10038;
		 public const ushort C2M_TestActorLocationRequest = 10043;
		 public const ushort M2C_TestActotLocationResponse = 10044;
		 public const ushort C2M_TestActorLocationMessage = 10045;
		 public const ushort M2C_TestActorMessage = 10046;
		 public const ushort C2A_LoginAccount = 10047;
		 public const ushort A2C_LoginAccount = 10048;
		 public const ushort C2A_RegisterAccount = 10050;
		 public const ushort A2C_RegisterAccount = 10051;
		 public const ushort C2A_LogoutRequest = 10052;
		 public const ushort A2C_LogoutResponse = 10053;
		 public const ushort A2C_Disconnect = 10049;
		 public const ushort C2A_CreateChessUnit = 10056;
		 public const ushort A2C_CreateChessUnit = 10057;
		 public const ushort C2G_RefreshShop = 10065;
		 public const ushort G2C_RefreshGold = 10068;
		 public const ushort G2C_RefreshShop = 10067;
		 public const ushort C2G_EnterChessMapFinish = 10064;
		 public const ushort C2G_BuyChampion = 10069;
		 public const ushort G2C_BuyChampion = 10070;
		 public const ushort ChampionInfoPB = 10071;
		 public const ushort G2C_UpdateBonus = 10072;
		 public const ushort C2G_DragChampion = 10073;
		 public const ushort G2C_DragChampion = 10074;
		 public const ushort G2C_SyncUnitPos = 10075;
		 public const ushort G2C_SyncTimer = 10076;
	}
}
